# Coding

./: .gitignore  GITHUB.md  SYNC_UTM.md  测试评估报告.md
packet_storm/: README.md  pyproject.toml  requirements.txt
packet_storm/configs/: batch_example.json  default.json
packet_storm/packet_storm/: __init__.py  __main__.py
packet_storm/packet_storm/anomaly/: __init__.py  base.py  fuzzer.py  registry.py
packet_storm/packet_storm/anomaly/generic/: __init__.py  checksum.py  field_tamper.py  flood.py  fragmentation.py  malformed.py  padding.py  replay.py  (+2 more)
packet_storm/packet_storm/capture/: __init__.py  flow_tracker.py  sniffer.py
packet_storm/packet_storm/cli/: __init__.py  main.py
packet_storm/packet_storm/core/: __init__.py  config.py  daemon.py  engine.py  orchestrator.py  registry.py  scheduler.py  session.py  stability.py
packet_storm/packet_storm/monitor/: __init__.py  display.py  exporter.py  stats.py
packet_storm/packet_storm/protocols/: __init__.py  base.py  fields.py
packet_storm/packet_storm/transport/: __init__.py  base.py  raw_socket.py  reconnect.py  scapy_send.py
packet_storm/packet_storm/utils/: __init__.py  checksum.py  hexdump.py  logging.py  validation.py
packet_storm/packet_storm/web/: __init__.py  app.py  ws.py
packet_storm/tests/test_core/: __init__.py  test_config.py  test_orchestrator.py  test_registry.py  test_scheduler.py  test_session.py
packet_storm/tests/test_utils/: test_checksum.py  test_hexdump.py  test_validation.py
packet_storm/web/: index.html  package.json  vite.config.js
packet_storm/web/src/: App.vue  main.js
(+495 files in other folders)
